src/test/parse-fail/keyword.rs
// compile-flags: -Z parse-only

pub mod break {
    //~^ ERROR expected identifier, found keyword `break`
}
